Fixed bug with large images overflowing beyond screen view. Fixed JSHint error.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -138,6 +138,10 @@ th {
     color: #444444;
 }
 
+img {
+    max-width: 100%;
+}
+
 
 /* Header */
 
